--- a/ModelTrainingUsingPyspark.ipynb
+++ b/ModelTrainingUsingPyspark.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "id": "8fbac13f",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "id": "2f39e37f",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "id": "3b8814d2",
    "metadata": {
     "scrolled": false
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "id": "9d86aef4",
    "metadata": {},
    "outputs": [
@@ -77,7 +77,7 @@
      "output_type": "stream",
      "text": [
       "root\n",
-      " |-- livingArea_sqft: double (nullable = true)\n",
+      " |-- livingArea in sq.ft: double (nullable = true)\n",
       " |-- beds: integer (nullable = true)\n",
       " |-- baths: integer (nullable = true)\n",
       " |-- address: string (nullable = true)\n",
@@ -85,7 +85,7 @@
       " |-- city: string (nullable = true)\n",
       " |-- state: string (nullable = true)\n",
       " |-- country: string (nullable = true)\n",
-      " |-- price_usd: integer (nullable = true)\n",
+      " |-- price in $: integer (nullable = true)\n",
       "\n"
      ]
     }
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "id": "ee9d8ebe",
    "metadata": {},
    "outputs": [],
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 6,
    "id": "e5887cf2",
    "metadata": {},
    "outputs": [],
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 7,
    "id": "59bb0e90",
    "metadata": {},
    "outputs": [],
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 8,
    "id": "f91cd43b",
    "metadata": {},
    "outputs": [],
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 15,
    "id": "9203e99a",
    "metadata": {},
    "outputs": [],
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 9,
    "id": "59cb0b6b",
    "metadata": {},
    "outputs": [],
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 10,
    "id": "4ddf4604",
    "metadata": {},
    "outputs": [],
@@ -923,7 +923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 16,
    "id": "35eb489a",
    "metadata": {},
    "outputs": [],
@@ -1074,6 +1074,178 @@
     "print(\"Best R2:\", best_r2)\n",
     "print(\"Best Parameters:\",best_params)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "f8d44d13",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RMSE:      $419,774.51\n",
+      "MAE:       $97,269.73\n"
+     ]
+    }
+   ],
+   "source": [
+    "eval_metrics = [\"rmse\", \"mae\"]\n",
+    "results = {}\n",
+    "\n",
+    "for m in eval_metrics:\n",
+    "    evaluator = RegressionEvaluator(\n",
+    "        labelCol=\"price_usd\", \n",
+    "        predictionCol=\"prediction\", \n",
+    "        metricName=m\n",
+    "    )\n",
+    "    results[m] = evaluator.evaluate(predictions)\n",
+    "\n",
+    "print(f\"RMSE:      ${results['rmse']:,.2f}\")\n",
+    "print(f\"MAE:       ${results['mae']:,.2f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "7331cacf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lower Bound for Price: $-529,377.50\n",
+      "Upper Bound for Price: $1,727,914.50\n"
+     ]
+    }
+   ],
+   "source": [
+    "quantiles = df.approxQuantile(\"price_usd\", [0.25, 0.75], 0.05)\n",
+    "Q1 = quantiles[0]\n",
+    "Q3 = quantiles[1]\n",
+    "IQR = Q3 - Q1\n",
+    "\n",
+    "lower_bound = Q1 - 1.5 * IQR\n",
+    "upper_bound = Q3 + 1.5 * IQR\n",
+    "\n",
+    "print(f\"Lower Bound for Price: ${lower_bound:,.2f}\")\n",
+    "print(f\"Upper Bound for Price: ${upper_bound:,.2f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "8d3ca631",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pyspark.sql.functions import col\n",
+    "df_clean = df.filter((col(\"price_usd\") >= lower_bound) & (col(\"price_usd\") <= upper_bound))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "72c73819",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original Count: 1000000\n",
+      "Cleaned Count: 922394\n",
+      "Removed 77606 outlier rows.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Original Count: {df.count()}\")\n",
+    "print(f\"Cleaned Count: {df_clean.count()}\")\n",
+    "print(f\"Removed {df.count() - df_clean.count()} outlier rows.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "0c8d90a2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_clean_df, test_clean_df = df.randomSplit([0.8, 0.2], seed=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "f70aa533",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gbt = GBTRegressor(\n",
+    "    featuresCol=\"features\", \n",
+    "    labelCol=\"price_usd\",\n",
+    "    maxDepth = 9,\n",
+    "    maxIter = 50\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "47f9bfca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pipeline = Pipeline(\n",
+    "stages=indexers + [encoder, assembler, gbt]\n",
+    ")\n",
+    "model = pipeline.fit(train_clean_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "09a2ec8c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predictions = model.transform(test_clean_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "e314727d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "R2 Score: 0.8603\n"
+     ]
+    }
+   ],
+   "source": [
+    "evaluator = RegressionEvaluator(\n",
+    "    labelCol=\"price_usd\",      \n",
+    "    predictionCol=\"prediction\", \n",
+    "    metricName=\"r2\"\n",
+    ")\n",
+    "r2 = evaluator.evaluate(predictions)\n",
+    "print(f\"R2 Score: {r2:.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b8ebeca6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
