--- a/ModelTrainingUsingPyspark.ipynb
+++ b/ModelTrainingUsingPyspark.ipynb
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "id": "c16b90c1",
    "metadata": {},
    "outputs": [
@@ -106,7 +106,7 @@
        "13"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "id": "ee9d8ebe",
    "metadata": {},
    "outputs": [],
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "id": "e5887cf2",
    "metadata": {},
    "outputs": [],
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "id": "59bb0e90",
    "metadata": {},
    "outputs": [],
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "id": "f91cd43b",
    "metadata": {},
    "outputs": [],
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "9203e99a",
    "metadata": {},
    "outputs": [],
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "id": "59cb0b6b",
    "metadata": {},
    "outputs": [],
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "id": "4ddf4604",
    "metadata": {},
    "outputs": [],
@@ -554,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 17,
    "id": "9cd45cb6",
    "metadata": {},
    "outputs": [],
@@ -567,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 18,
    "id": "5856fd82",
    "metadata": {},
    "outputs": [],
@@ -580,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 19,
    "id": "af35fb05",
    "metadata": {},
    "outputs": [],
@@ -591,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 20,
    "id": "d092322a",
    "metadata": {},
    "outputs": [],
@@ -604,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 21,
    "id": "606dbbf2",
    "metadata": {},
    "outputs": [],
@@ -923,7 +923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 22,
    "id": "35eb489a",
    "metadata": {},
    "outputs": [],
@@ -1108,7 +1108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "id": "7331cacf",
    "metadata": {},
    "outputs": [
@@ -1136,7 +1136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "id": "8d3ca631",
    "metadata": {},
    "outputs": [],
@@ -1169,17 +1169,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 28,
    "id": "0c8d90a2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_clean_df, test_clean_df = df.randomSplit([0.8, 0.2], seed=42)"
+    "train_clean_df, test_clean_df = df_clean.randomSplit([0.8, 0.2], seed=42)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 29,
    "id": "f70aa533",
    "metadata": {},
    "outputs": [],
@@ -1194,20 +1194,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 30,
    "id": "47f9bfca",
    "metadata": {},
    "outputs": [],
    "source": [
     "pipeline = Pipeline(\n",
-    "stages=indexers + [encoder, assembler, gbt]\n",
+    "stages=indexers + [sqft_assembler,scaler,encoder, assembler,gbt]\n",
     ")\n",
     "model = pipeline.fit(train_clean_df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 31,
    "id": "09a2ec8c",
    "metadata": {},
    "outputs": [],
@@ -1225,7 +1225,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "R2 Score: 0.8603\n"
+      "R2 Score: 0.9698\n"
      ]
     }
    ],
